Fix block squishing

--- a/_sass/rebellion.scss
+++ b/_sass/rebellion.scss
@@ -41,7 +41,7 @@ $action-bar-height-mobile: 56px !default;
 $rounding: 5px;
 
 // Blocks
-$block-height: calc(min( 50vw, 70vh ));
+$block-height: calc(max(min( 50vw, 70vh ), 400px);
 
 // Import partials.
 @import
